GNOME Bugzilla – Bug 787669
Middle mouse click on scrollbar is ignored
Last modified: 2017-10-11 21:19:45 UTC
Usually applications allow to scroll immediately at the point of the click by clicking the scrollbar with middle mouse button. It is most useful with big documents as it allows to not try catching the small scroll widget of the scrollbar, but to scroll immediately. But for some reason it doesn't work in evince. To reproduce: 1. Open a document with multiple pages 2. Click on the free space of the scrollbar with middle mouse button (i.e. the button under wheel). 3. See as nothing happens (it ought to scroll at the point of the click) It's said that gtk3 apps need the settings below for that to work — I have it set. $ grep gtk-primary-button-warps-slider ~/.config/gtk-3.0/settings.ini gtk-primary-button-warps-slider=false
I'm not aware of any gtk3 apps which do this, scroll on middle click, so I'm marking this as an enhancement and reassigning to gtk3.
(In reply to Jason Crain from comment #1) > I'm not aware of any gtk3 apps which do this, scroll on middle click, so I'm > marking this as an enhancement and reassigning to gtk3. Well, granted I don't use much gtk3 apps, but it works in Thunderbird and Firefox. Anyway, why is that an enhancement as opposed to a bug if there is an option to enable that behavior?
I'm also put this link here for two reasons: to show it's a popular feature, and that usually that option is used to enable it in gtk3 apps https://askubuntu.com/questions/295988/how-to-fix-gtk3-scrollbar-behavior
Ah, wait, never mind, it's a question about left click. It's worth noting though, that for some reason in Firefox middle click didn't work until I enabled just that option.
scrollbar behavior has changed a bit, but that is not a bug. web browsers like firefox do their own scrolling
But this is a problem! May be this is not obvious, but recently it worked everywhere. To list: Pidgin (gtk3), Konsole, Dolphin, Firefox, Thunderbird, Okular, Chromium, vlc, qutebrowser… This is a usability problem, how do people supposed to scroll?
@Matthias Clasen can you at least not close it? If not because it's useful, then at least for consistency with a bunch of other apps — it's clearly a feature, we can't create a bunch of bugreports to other toolkits and apps about "disabling middle click scroll for consistency with newer gtk3" (note: it worked in gtk3 earlier, e.g. pidgin is gtk3).
I mean, so somebody besides gtk3 developers could join and be sure that if they fix it, the patchset will be accepted.
I encourage hi-angel and I want this feature to be added, please make this thing with middle-click-scrolling to work, because that will save tons of time for me and other developers, thanks!
(In reply to hi-angel from comment #6) > But this is a problem! May be this is not obvious, but recently it worked > everywhere. To list: > > Konsole Which is a KDE/Qt application… > Dolphin Assuming you mean the file manager, another KDE/Qt application… > Firefox, Thunderbird Do not use GTK for their scrollbars… > Okular KDE/Qt application… > Chromium, Does not use GTK for the scrollbars… > vlc, qutebrowser… Do not use GTK… > This is a usability problem, how do people supposed to scroll? With their pointing device, or their touchscreen. I assume, though, you're talking about *jumping* to a specific location. If you are using a GTK+ application (and only Pidgin, in the list above, applies) then you can scroll to the location of the pointer using Ctrl + click.
> If you are using a GTK+ application (and only Pidgin, in the list above, > applies) then you can scroll to the location of the pointer using Ctrl + click. I just tried it with evince, and it doesn't work. Either way, suppose it should work — why not to just bind one more shortcut? Nobody knows Ctrl+click, but everybody know middle-click for the simple reason that it worked earlier, including GTK3 until they, as Matthias said, changed scrollbar behavior a bit (e.g. pidgin has the old behavior). Middle-click is a noop otherwise, so it should be fine.
To add another GTK3 app: it does work in GIMP.
most laptops don't even have a middle mouse button. different toolkits have different behaviors, its a fact of life. we offer other useful functionality for scrolling, such as variable-speed smooth scrolling.
(In reply to hi-angel from comment #12) > To add another GTK3 app: it does work in GIMP. GIMP is a GTK+ 2 application.
Matthias Clasen: 1. Peoples are using laptops with mouse whenever possible anyway. In fact, I am writing this right now from a laptop without a middle button, but I do use mouse. 2. Middle mouse click on touchpad is emulated by pressing both left and right buttons simulationously. It is actually hard to work without any middle mouse capability on touchpad, e.g. because it automatically leaves you without primary clipboard. > we offer other useful functionality for scrolling This is great, but please, can you explain why does this functionality conflict with a simple hotkey?
(In reply to hi-angel from comment #0) > It's said that gtk3 apps need the settings below for that to work — I have > it set. > > $ grep gtk-primary-button-warps-slider ~/.config/gtk-3.0/settings.ini > gtk-primary-button-warps-slider=false That affects what the primary button, i.e. single click, does. It might indeed be good to have the option to keep that off, with the primary button doing pagewise movement, and make middle click do the warp if it doesn't conflict with anything; I don't know whether it would.
Created attachment 361347 [details] [review] range: Bring back middle clicks It does not hurt us to keep middle clicks doing the same as shift-primary clicks. This makes the transition from gtk2 less painful in terms of muscle memory.
(In reply to hi-angel from comment #15) > > This is great, but please, can you explain why does this functionality > conflict with a simple hotkey? I've come to the conclusion that it doesn't
Attachment 361347 [details] pushed as 2120ea6 - range: Bring back middle clicks
Matthias Clasen, man, I love you, thank you very much!
Created attachment 361381 [details] [review] Settings: Reflect resurrected middleclick in Range and while here, make the explanation more explicit as to which values do what, & use general Range terminology instead of focussing on scrollbars
Comment on attachment 361381 [details] [review] Settings: Reflect resurrected middleclick in Range cherry-picked to gtk-3-22 Attachment 361381 [details] pushed as 694686d - Settings: Reflect resurrected middleclick in Range